--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.njcit" >
 	<uses-permission android:name="android.permission.INTERNET"/>
-	<application android:label="@string/app_name">
-		<activity android:name=".view.MainActivity_"
+	<uses-sdk android:minSdkVersion="11"/>
+	<application android:label="@string/app_name" >
+		<activity android:name=".view.LoginActivity_"
 				  android:label="@string/app_name"
 				  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
+		</activity>
+		<activity android:name=".view.MainActivity_"
+				  android:label="@string/mainAcitvity"
+				  >
 		</activity>
 	</application>
 
