--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
 	<application android:label="@string/app_name" >
 		<activity android:name=".view.LoginActivity_"
 				  android:label="@string/app_name"
-				  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:theme="@android:style/Theme.Light"
+				  >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -14,6 +15,7 @@
 		</activity>
 		<activity android:name=".view.MainActivity_"
 				  android:label="@string/mainAcitvity"
+                  android:theme="@android:style/Theme.Light"
 				  >
 		</activity>
 	</application>
