--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 		</activity>
 		<activity android:name=".view.MainActivity_"
 				  android:label="@string/mainAcitvity"
-                  android:theme="@android:style/Theme.Light"
+				android:theme="@style/StyledIndicators"
 				  >
 		</activity>
 	</application>
